deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-hadiya-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hadiya
  template:
    metadata:
      labels:
        app: hadiya
    spec:
      containers:
      - name: hadiya
        image: public.ecr.aws/x8p9m7t4/hadiya:latest
        ports: 
        - containerPort: 3000
